chore: 누적된 변경분 일괄 반영
- 고객도 예약 스케쥴 조회 가능하도록 ReservationController 권한 완화 + ReservationResponse PII 마스킹
- MenuSeeder에 미용실 소개/예약하기/예약 현황 헤더 메뉴 추가
- 기타 어드민 페이지/시드 정리

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>